--- a/File.Manager/File.Manager.BusinessLogic/File.Manager.BusinessLogic.csproj
+++ b/File.Manager/File.Manager.BusinessLogic/File.Manager.BusinessLogic.csproj
@@ -9,7 +9,7 @@
     <PackageReference Include="Spooksoft.VisualStateManager" Version="1.1.0" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\File.Manager.API\File.Manager.API.csproj" />
+    <ProjectReference Include="..\File.Manager.API\File.Manager.API.csproj" />
     <ProjectReference Include="..\File.Manager.Common\File.Manager.Common.csproj" />
     <ProjectReference Include="..\File.Manager.Dependencies\File.Manager.Dependencies.csproj" />
     <ProjectReference Include="..\File.Manager.Resources\File.Manager.Resources.csproj" />
