--- a/File.Manager/File.Manager/File.Manager.csproj
+++ b/File.Manager/File.Manager/File.Manager.csproj
@@ -10,6 +10,9 @@
     <ApplicationIcon>icon.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
+    <None Include="..\..\.editorconfig" Link=".editorconfig" />
+  </ItemGroup>
+  <ItemGroup>
     <PackageReference Include="Autofac" Version="6.5.0" />
     <PackageReference Include="Fluent.Ribbon" Version="9.0.4" />
     <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
