--- a/File.Manager/File.Manager/File.Manager.csproj
+++ b/File.Manager/File.Manager/File.Manager.csproj
@@ -21,11 +21,11 @@
     <PackageReference Include="System.Data.DataSetExtensions" Version="4.5.0" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\File.Manager.Geometry\File.Manager.Geometry.csproj" />
     <ProjectReference Include="..\File.Manager.BusinessLogic\File.Manager.BusinessLogic.csproj" />
     <ProjectReference Include="..\File.Manager.Common.Wpf\File.Manager.Common.Wpf.csproj" />
     <ProjectReference Include="..\File.Manager.Common\File.Manager.Common.csproj" />
     <ProjectReference Include="..\File.Manager.Dependencies\File.Manager.Dependencies.csproj" />
+    <ProjectReference Include="..\File.Manager.Geometry\File.Manager.Geometry.csproj" />
     <ProjectReference Include="..\File.Manager.Resources\File.Manager.Resources.csproj" />
   </ItemGroup>
   <ItemGroup>
