--- a/File.Manager/File.Manager/File.Manager.csproj
+++ b/File.Manager/File.Manager/File.Manager.csproj
@@ -10,30 +10,42 @@
     <ApplicationIcon>icon.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
+    <None Remove="Resources\Images\AddToSelection16.png" />
+    <None Remove="Resources\Images\AddToSelection32.png" />
     <None Remove="Resources\Images\Copy16.png" />
     <None Remove="Resources\Images\Copy32.png" />
     <None Remove="Resources\Images\Delete16.png" />
     <None Remove="Resources\Images\Delete32.png" />
     <None Remove="Resources\Images\Edit16.png" />
     <None Remove="Resources\Images\Edit32.png" />
+    <None Remove="Resources\Images\InvertSelection16.png" />
+    <None Remove="Resources\Images\InvertSelection32.png" />
     <None Remove="Resources\Images\Move16.png" />
     <None Remove="Resources\Images\Move32.png" />
     <None Remove="Resources\Images\NewFolder16.png" />
     <None Remove="Resources\Images\NewFolder32.png" />
+    <None Remove="Resources\Images\RemoveFromSelection16.png" />
+    <None Remove="Resources\Images\RemoveFromSelection32.png" />
     <None Remove="Resources\Images\View16.png" />
     <None Remove="Resources\Images\View32.png" />
   </ItemGroup>
   <ItemGroup>
+    <Resource Include="Resources\Images\AddToSelection16.png" />
+    <Resource Include="Resources\Images\AddToSelection32.png" />
     <Resource Include="Resources\Images\Copy16.png" />
     <Resource Include="Resources\Images\Copy32.png" />
     <Resource Include="Resources\Images\Delete16.png" />
     <Resource Include="Resources\Images\Delete32.png" />
     <Resource Include="Resources\Images\Edit16.png" />
     <Resource Include="Resources\Images\Edit32.png" />
+    <Resource Include="Resources\Images\InvertSelection16.png" />
+    <Resource Include="Resources\Images\InvertSelection32.png" />
     <Resource Include="Resources\Images\Move16.png" />
     <Resource Include="Resources\Images\Move32.png" />
     <Resource Include="Resources\Images\NewFolder16.png" />
     <Resource Include="Resources\Images\NewFolder32.png" />
+    <Resource Include="Resources\Images\RemoveFromSelection16.png" />
+    <Resource Include="Resources\Images\RemoveFromSelection32.png" />
     <Resource Include="Resources\Images\View16.png" />
     <Resource Include="Resources\Images\View32.png" />
   </ItemGroup>
