--- a/File.Manager/File.Manager.BusinessLogic/File.Manager.BusinessLogic.csproj
+++ b/File.Manager/File.Manager.BusinessLogic/File.Manager.BusinessLogic.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\File.Manager.API\File.Manager.API.csproj" />
+    <ProjectReference Include="..\File.Manager.Common.Wpf\File.Manager.Common.Wpf.csproj" />
     <ProjectReference Include="..\File.Manager.Common\File.Manager.Common.csproj" />
     <ProjectReference Include="..\File.Manager.Dependencies\File.Manager.Dependencies.csproj" />
     <ProjectReference Include="..\File.Manager.OsInterop\File.Manager.OsInterop.csproj" />
