--- a/File.Manager/File.Manager/File.Manager.csproj
+++ b/File.Manager/File.Manager/File.Manager.csproj
@@ -26,6 +26,8 @@
     <None Remove="Resources\Images\NewFolder32.png" />
     <None Remove="Resources\Images\RemoveFromSelection16.png" />
     <None Remove="Resources\Images\RemoveFromSelection32.png" />
+    <None Remove="Resources\Images\Search16.png" />
+    <None Remove="Resources\Images\Search32.png" />
     <None Remove="Resources\Images\View16.png" />
     <None Remove="Resources\Images\View32.png" />
   </ItemGroup>
@@ -46,6 +48,8 @@
     <Resource Include="Resources\Images\NewFolder32.png" />
     <Resource Include="Resources\Images\RemoveFromSelection16.png" />
     <Resource Include="Resources\Images\RemoveFromSelection32.png" />
+    <Resource Include="Resources\Images\Search16.png" />
+    <Resource Include="Resources\Images\Search32.png" />
     <Resource Include="Resources\Images\View16.png" />
     <Resource Include="Resources\Images\View32.png" />
   </ItemGroup>
