Fixed bug related to extracting icons from the system

--- a/File.Manager/File.Manager.Common.Wpf/File.Manager.Common.Wpf.csproj
+++ b/File.Manager/File.Manager.Common.Wpf/File.Manager.Common.Wpf.csproj
@@ -5,6 +5,7 @@
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <UseWPF>true</UseWPF>
     <ImportWindowsDesktopTargets>true</ImportWindowsDesktopTargets>
+    <Platforms>AnyCPU;x64</Platforms>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
