--- a/File.Manager/File.Manager.Resources/File.Manager.Resources.csproj
+++ b/File.Manager/File.Manager.Resources/File.Manager.Resources.csproj
@@ -3,6 +3,7 @@
     <TargetFramework>net6.0-windows</TargetFramework>
     <OutputType>Library</OutputType>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+    <Platforms>AnyCPU;x64</Platforms>
   </PropertyGroup>
   <ItemGroup>
     <Compile Update="Controls\Pane\Strings.Designer.cs">
